// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Datepicker renders correctly 1`] = `
<test>
  <div
    class="ecl-form-group ecl-form-group--text-input"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label    
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-datepicker"
    >
      <input
        class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
        data-ecl-auto-init="Datepicker"
        data-ecl-datepicker-toggle=""
        id="example-input-id-1"
        name="example-input-id-1"
        placeholder="DD-MM-YYYY"
        required=""
        type="text"
      />
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-datepicker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--calendar"
        />
      </svg>
    </div>
  </div>
</test>
`;

exports[`EC - Datepicker renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-form-group ecl-form-group--text-input"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label    
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-datepicker"
      data-test="data-test-value"
      data-test-1="data-test-value-1"
      null=""
    >
      <input
        class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
        data-ecl-auto-init="Datepicker"
        data-ecl-datepicker-toggle=""
        id="example-input-id-1"
        name="example-input-id-1"
        placeholder="DD-MM-YYYY"
        required=""
        type="text"
      />
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-datepicker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--calendar"
        />
      </svg>
    </div>
  </div>
</test>
`;

exports[`EC - Datepicker renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-form-group ecl-form-group--text-input"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label    
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-datepicker custom-class custom-class--test"
    >
      <input
        class="ecl-datepicker__field ecl-text-input ecl-text-input--s"
        data-ecl-auto-init="Datepicker"
        data-ecl-datepicker-toggle=""
        id="example-input-id-1"
        name="example-input-id-1"
        placeholder="DD-MM-YYYY"
        required=""
        type="text"
      />
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-datepicker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--calendar"
        />
      </svg>
    </div>
  </div>
</test>
`;
